// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav should change width after clicking on burger icon 1`] = `
.c9 {
  font-size: 16px;
}

.c9 * {
  fill: #555;
}

.c5 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c5:nth-child(1) {
  top: 0px;
}

.c5:nth-child(2) {
  top: calc(16px * 0.4);
}

.c5:nth-child(3) {
  top: calc(16px * 0.8);
}

.c3 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c3 .c4:nth-child(1) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c3 .c4:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c3 .c4:nth-child(3) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c11 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c7 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: 60px auto;
  grid-template-columns: 60px auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c7 .c8 {
  grid-area: icon;
  font-size: 24px;
}

.c7 > .c10 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c12 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #7C7B7B;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: 60px auto;
  grid-template-columns: 60px auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c12 .c8 {
  grid-area: icon;
  font-size: 24px;
}

.c12 > .c10 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c6 {
  height: 100%;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c13 .c8 * {
  fill: #ffffff;
}

.c13 .c2 * {
  background: #ffffff;
}

.c13 .c10 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 {
  height: 100%;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow: hidden;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #FE8D6B;
}

.c0 .c8 * {
  fill: #ffffff;
}

.c0 .c2 * {
  background: #ffffff;
}

.c0 .c10 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

.c0 .c14 {
  max-height: 500px;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

<div
  class="c0"
  data-testid="sidenav"
  open=""
>
  <div
    class="c1"
  >
    <button
      class="c2 c3"
      id="burgerIcon"
      open=""
    >
      <span
        class="c4 c5"
      />
      <span
        class="c4 c5"
      />
      <span
        class="c4 c5"
      />
    </button>
  </div>
  <ul
    class="c6"
  >
    <li
      class="c7"
    >
      <div
        class="c1"
      >
        <svg
          class="c8 c9"
          height="1em"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
          />
        </svg>
      </div>
      <span
        class="c10 c11"
      >
        Home
      </span>
    </li>
    <li
      class="c12"
    >
      <div
        class="c1"
      >
        <svg
          class="c8 c9"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="c10 c11"
      >
        Search
      </span>
    </li>
  </ul>
</div>
`;

exports[`SideNav should change width when clicked on item with sidenavOpenCloseOnClick prop given 1`] = `
.c10 {
  font-size: 16px;
}

.c10 * {
  fill: #555;
}

.c5 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c5:nth-child(1) {
  top: 0px;
}

.c5:nth-child(2) {
  top: calc(16px * 0.4);
}

.c5:nth-child(3) {
  top: calc(16px * 0.8);
}

.c3 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c3 .c4:nth-child(1) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c3 .c4:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c3 .c4:nth-child(3) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c12 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c8 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: 60px auto;
  grid-template-columns: 60px auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c8 .c9 {
  grid-area: icon;
  font-size: 24px;
}

.c8 > .c11 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c13 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #7C7B7B;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: 60px auto;
  grid-template-columns: 60px auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c13 .c9 {
  grid-area: icon;
  font-size: 24px;
}

.c13 > .c11 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c6 {
  height: 100%;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c15 {
  grid-area: submenu;
  padding: 0px;
  max-height: 0;
  overflow: hidden;
  box-sizing: border-box;
}

.c15 .c7 {
  display: block;
}

.c16 .c9 * {
  fill: #ffffff;
}

.c16 .c2 * {
  background: #ffffff;
}

.c16 .c11 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c16 .c14 {
  max-height: 0px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0 {
  height: 100%;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow: hidden;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #FE8D6B;
}

.c0 .c9 * {
  fill: #ffffff;
}

.c0 .c2 * {
  background: #ffffff;
}

.c0 .c11 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

.c0 .c14 {
  max-height: 500px;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

<div
  class="c0"
  data-testid="sidenav"
  open=""
>
  <div
    class="c1"
  >
    <button
      class="c2 c3"
      id="burgerIcon"
      open=""
    >
      <span
        class="c4 c5"
      />
      <span
        class="c4 c5"
      />
      <span
        class="c4 c5"
      />
    </button>
  </div>
  <ul
    class="c6"
  >
    <li
      class="c7 c8"
    >
      <div
        class="c1"
      >
        <svg
          class="c9 c10"
          height="1em"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
          />
        </svg>
      </div>
      <span
        class="c11 c12"
      >
        Home
      </span>
    </li>
    <li
      class="c7 c13"
    >
      <div
        class="c1"
      >
        <svg
          class="c9 c10"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
            fill="none"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="c11 c12"
      >
        Search
      </span>
      <ul
        class="c14 c15"
      >
        <li
          class="c7 c13"
        >
          <span
            class="c11 c12"
          >
            Cars
          </span>
        </li>
        <li
          class="c7 c8"
        >
          <span
            class="c11 c12"
          >
            Bikes
          </span>
        </li>
        <li
          class="c7 c8"
        >
          <span
            class="c11 c12"
          >
            Phones
          </span>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`SideNav should render properly 1`] = `
.c8 {
  font-size: 16px;
}

.c8 * {
  fill: #555;
}

.c4 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #555;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c4:nth-child(1) {
  top: 0px;
}

.c4:nth-child(2) {
  top: calc(16px * 0.4);
}

.c4:nth-child(3) {
  top: calc(16px * 0.8);
}

.c3 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c10 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c6 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: transparent;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: 60px auto;
  grid-template-columns: 60px auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c6 .c7 {
  grid-area: icon;
  font-size: 24px;
}

.c6 > .c9 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 400;
}

.c11 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #7C7B7B;
  display: grid;
  grid-template-areas: 'icon header' 'icon submenu';
  grid-template-rows: 60px auto;
  grid-template-columns: 60px auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 35px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c11 .c7 {
  grid-area: icon;
  font-size: 24px;
}

.c11 > .c9 {
  grid-area: header;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.c5 {
  height: 100%;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #ffffff;
}

.c0 {
  height: 100%;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow: hidden;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 60px;
  background-color: #FE8D6B;
}

.c0 .c7 * {
  fill: #ffffff;
}

.c0 .c2 * {
  background: #ffffff;
}

.c0 .c9 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 .c12 {
  max-height: 0px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

<div>
  <div
    class="c0"
    data-testid="sidenav"
  >
    <div
      class="c1"
    >
      <button
        class="c2 c3"
        id="burgerIcon"
      >
        <span
          class="c4"
        />
        <span
          class="c4"
        />
        <span
          class="c4"
        />
      </button>
    </div>
    <ul
      class="c5"
    >
      <li
        class="c6"
      >
        <div
          class="c1"
        >
          <svg
            class="c7 c8"
            height="1em"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
            />
          </svg>
        </div>
        <span
          class="c9 c10"
        >
          Home
        </span>
      </li>
      <li
        class="c11"
      >
        <div
          class="c1"
        >
          <svg
            class="c7 c8"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="c9 c10"
        >
          Search
        </span>
      </li>
    </ul>
  </div>
</div>
`;
